# mudio

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api_reference.md  cli_reference.md
src/mudio/: __init__.py  __main__.py  batch.py  cli.py  core.py  operations.py  processor.py  tests_integration.py  utils.py
tests/: conftest.py  repro_race.py  test_batch.py  test_canonicalization.py  test_cli.py  test_cli_args.py  test_core.py  test_custom_fields_real.py  test_custom_key_casing.py  test_exit_codes.py  test_extended_cleaning.py  test_mode_config.py  test_namespace_config.py  test_operations.py  test_processor.py  test_readonly.py  test_real_audio.py  test_real_files.py  test_utils.py  test_wma_mp4_fields.py
tests/audio/: silence.flac  silence.m4a  silence.opus  silence.wma  silence.wv
tests/integration/: test_audio_features.py  test_audio_io.py  test_cli.py  test_edge_cases.py  test_operations_integration.py  test_permissions.py
tests/unit/: test_batch.py  test_config.py  test_core.py  test_format_logic.py  test_operations.py  test_processor.py  test_utils.py
